# nerfus

./: README.md  pyproject.toml
nerfus/: nerfus_config.py  nerfus_datamanager.py  nerfus_field.py  nerfus_model.py  nerfus_pipeline.py
nerfus/data/dataparsers/: semantic_replica_dataparser.py  semantic_scannet_dataparser.py
nerfus/data/datasets/: semantic_segmentation_dataset.py
nerfus/data/utils/: data_utils.py
nerfus/field_components/: field_heads.py
nerfus/model_components/: losses.py
